# CrossCompileSDL

./: CMakeLists.txt  main.cpp  windows_toolchain.cmake
SDL2/: Makefile  Makefile.rules  config.status  libtool
SDL2/include/: SDL_config.h
